backend add with integration

--- a/src/app/pages/create-page/create-page.component.html
+++ b/src/app/pages/create-page/create-page.component.html
@@ -1,3 +1,3 @@
 <h2 class="section-title create-page__title">Добавить пользователя</h2>
 
-<app-user-form (userSubmit)="createUser($event)"></app-user-form>
+<app-user-form [isDisabled]="disabledActions" (userSubmit)="createUser($event)"></app-user-form>
