--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -25,7 +25,7 @@
   </div>
 </header>
 
-<section>
+<section class="wrapper">
   <div class="container">
     <router-outlet></router-outlet>
   </div>
