--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -17,7 +17,12 @@
   </div>
 
   <div class="user-form__row user-form__bottom-actions">
-    <button class="user-form__submit-btn" type="submit" [disabled]="!form.valid">
+    <button
+      disabled="[isDisabled()]"
+      class="user-form__submit-btn"
+      type="submit"
+      [disabled]="!form.valid || isDisabled()"
+    >
       {{ submitText }}
     </button>
   </div>
